# Arcanum

./: CMakeLists.txt  README.md  arcanum.css  arcanum.js  chronicleforge_dev.db-shm  chronicleforge_dev.db-wal  db.js  index.html  lieux.html  main.js  package-lock.json  package.json  personnages.html  preload.js  scenes.html  search.html  timeline.html
renderer/: arcanum-client.js  arcanum.js  carte.html  ecriture.html  index.html  lieux.html  personnages.html  scenes.html  search.html  timeline.html
resources/styles/: main.qss
src/: App.cpp  App.h  main.cpp
src/core/: AppConfig.cpp  AppConfig.h  Assert.h  Logger.cpp  Logger.h  Result.h
src/domain/entities/: Chapter.h  Character.h  Faction.h  Place.h  Scene.h  TimelineEvent.h
src/domain/events/: DomainEvent.h
src/domain/valueobjects/: EntityId.h  Relationship.h  TimePoint.h
src/infrastructure/database/: DatabaseManager.cpp  DatabaseManager.h  MigrationRunner.cpp  MigrationRunner.h
src/infrastructure/database/migrations/: Migration_001_initial.h  Migration_002_fts.h
src/infrastructure/repositories/: SqliteChapterRepository.cpp  SqliteChapterRepository.h  SqliteCharacterRepository.cpp  SqliteCharacterRepository.h  SqliteFactionRepository.cpp  SqliteFactionRepository.h  SqlitePlaceRepository.cpp  SqlitePlaceRepository.h  SqliteSceneRepository.cpp  SqliteSceneRepository.h  SqliteSearchRepository.cpp  SqliteSearchRepository.h  SqliteTimelineRepository.cpp  SqliteTimelineRepository.h
src/repositories/: IChapterRepository.h  ICharacterRepository.h  IFactionRepository.h  IPlaceRepository.h  IRepository.h  ISceneRepository.h  ISearchRepository.h  ITimelineRepository.h
src/services/: AutoCompleteService.cpp  AutoCompleteService.h  ChapterService.cpp  ChapterService.h  CharacterService.cpp  CharacterService.h  FactionService.cpp  FactionService.h  PlaceService.cpp  PlaceService.h  SearchService.cpp  SearchService.h  TimelineService.cpp  TimelineService.h
src/ui/: MainWindow.cpp  MainWindow.h
src/ui/dialogs/: CharacterPickerDialog.cpp  CharacterPickerDialog.h  FactionPickerDialog.cpp  FactionPickerDialog.h  NewProjectDialog.cpp  NewProjectDialog.h  PlacePickerDialog.cpp  PlacePickerDialog.h  SettingsDialog.cpp  SettingsDialog.h
src/ui/viewmodels/: ChapterViewModel.cpp  ChapterViewModel.h  CharacterViewModel.cpp  CharacterViewModel.h  FactionViewModel.cpp  FactionViewModel.h  MapViewModel.cpp  MapViewModel.h  PlaceViewModel.cpp  PlaceViewModel.h  SearchViewModel.cpp  SearchViewModel.h  TimelineViewModel.cpp  TimelineViewModel.h
src/ui/widgets/chapters/: AutoCompletePopup.cpp  AutoCompletePopup.h  ChapterEditorWidget.cpp  ChapterEditorWidget.h  ChapterListWidget.cpp  ChapterListWidget.h
src/ui/widgets/characters/: CharacterEditorWidget.cpp  CharacterEditorWidget.h  CharacterListWidget.cpp  CharacterListWidget.h
src/ui/widgets/factions/: FactionEditorWidget.cpp  FactionEditorWidget.h  FactionListWidget.cpp  FactionListWidget.h
src/ui/widgets/map/: MapWidget.cpp  MapWidget.h
src/ui/widgets/places/: PlaceEditorWidget.cpp  (+3 more)
(+6 files in other folders)
